--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
+* {
+  margin: 0;
+  box-sizing: border-box;
+}
+
+:root {
+  /* colours go here */
+  --background: pink;
+  --primaryFont: blue;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
