--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
   --primaryFont: blue;
 }
 
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -16,9 +17,17 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(150deg,#CFEDEE 20%,#d9c3e0 40%, #CFEDEE 60% );
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  height: 100%;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+
+
+
